[package]
name = "alloy-function-selector"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.2.0", features = [
    "full",
    "node-bindings",
    "rpc-types-debug",
    "rpc-types-trace",
    "json-rpc",
    "rpc-client",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }
